--- a/static/main/base/css/base.css
+++ b/static/main/base/css/base.css
@@ -32,9 +32,6 @@ body{
     background-color: var(--color-neutral-1);
     display: flex;
     flex-direction: column;
-    height: 100vh;
-    width: 100vw;
-    overflow: hidden;
 
     main{
         display: flex;
@@ -45,10 +42,11 @@ body{
     }
 
     .root{
+        height: 100%;
         display: flex;
         flex-direction: column;
-        gap: 10px;
         overflow: auto;
+        gap: 10px;
         padding: 10px;
         background-color: var(--color-neutral-0);
         border-radius: 10px;
