--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -1,4 +1,4 @@
-{%extends 'main.html'%}
+{%extends 'main/base.html' %}
 {% load static %}
 {% block head %}
 <link rel="stylesheet" href="{% static 'dashboard/styles.css' %}">
