--- a/apps/dashboard/templates/dashboard/dashboard.html
+++ b/apps/dashboard/templates/dashboard/dashboard.html
@@ -1,7 +1,7 @@
 {%extends 'main/base.html' %}
 {% load static %}
 {% block head %}
-<link rel="stylesheet" href="{% static 'dashboard/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'dashboard/styles/dashboard.css' %}">
 {% endblock %}
 {% block content %}
 <div id="dashboard">
