--- a/apps/registrations/templates/registrations/user/permissions.html
+++ b/apps/registrations/templates/registrations/user/permissions.html
@@ -1,4 +1,4 @@
-{% extends 'main/base.html' %}
+{% extends 'main/../../../../../templates/base.html' %}
 {% load static %}
 
 {% block title %}Novo permissões{% endblock %}
