--- a/apps/transaction/templates/transaction/payment/list.html
+++ b/apps/transaction/templates/transaction/payment/list.html
@@ -36,7 +36,7 @@
         <a href="{% url 'transaction:payment_method_create' %}"><button type="button" class="custom-button new">Novo</button></a>
     </section>
 
-    <section class="tabela-container">
+    <section class="table-container">
         <table class="table">
             <caption>
             </caption>
