--- a/static/base/css/tables.css
+++ b/static/base/css/tables.css
@@ -1,5 +1,5 @@
 /* Tabela Padrão*/
-.tabela-container {
+.table-container {
     display: block;
     width: 100%;
     background: #fff;
@@ -61,3 +61,5 @@
 }
 
 }
+
+
