--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -1,4 +1,4 @@
-{%extends 'base.html' %}
+{%extends 'index.html' %}
 {% load static %}
 
 {% block head %}
@@ -44,7 +44,7 @@
     </section>
     <section>
         <h1 class="title-div">Proximos Vencimentos</h1>
-        <div class="tabela-container">
+        <div class="table-container">
             <table>
                 <thead>
                     <th>Descrição</th>
@@ -68,7 +68,7 @@
         </div>
 
         <h1 class="title-div">Vencidos</h1>
-        <div class="tabela-container">
+        <div class="table-container">
             <table>
                 <thead>
                     <th>Descrição</th>
