--- a/templates/subscription/list.html
+++ b/templates/subscription/list.html
@@ -1,15 +1,25 @@
-{%extends 'base.html' %}
+{%extends 'index.html' %}
 {% load static %}
 {% load l10n %}
+
+{% block head %}
+    <link rel="stylesheet" href="{% static 'base/css/dialog.css' %}">
+{% endblock %}
 
 {% block content %}
 <section class="title-div">
     <h1>Assinaturas</h1>
 </section>
 
+<dialog id="dialog_form">
+    <div id="form_subscription" hx-swap-oob="true">
+
+    </div>
+</dialog>
+
 <section class="filter" id="filter_content">
     <h3>Filtros</h3>
-    <form method="GET">
+    <form hx-get="{% url 'subscription:list' %}" hx-target="#subscription_table" >
         <div class="grid">
             <div class="filter-item">
                 <label for="f_id">ID</label>
@@ -27,7 +37,7 @@
                     <select name="f_category" id="f_category">
                         <option value="" selected>Selecione</option>
                         {% for category in categories %}
-                            <option value="{{ category.pk }}" {% if f_category == category.pk|stringformat:"s" %}selected{% endif %}>{{ category.pk }} - {{ category.category }}</option>
+                            <option value="{{ category.pk }}" {% if f_category == category.pk|stringformat:"s" %}selected{% endif %}>{{ category.pk }} - {{ category.name }}</option>
                         {% endfor %}
                     </select>
                 </div>
@@ -36,7 +46,6 @@
             <div class="filter-item">
                 <label for="f_status">Situação</label>
                 <select name="f_status" id="f_status">
-                    <option value="" selected>Selecione</option>
                     <option value="A" {% if f_status == 'A' %}selected{% endif %}>Ativo</option>
                     <option value="C" {% if f_status == 'C' %}selected{% endif %}>Cancelado</option>
                 </select>
@@ -53,23 +62,25 @@
 <div class="root">
 
     <section class="card-buttons">
-        <a href="{% url 'subscription:create' %}"><button type="button" class="custom-button new">Nova Assinatura</button></a>
+        <div class="badge badge--success">Ativas: {{ assinaturas_a }}</div>
+        <button hx-get="{% url 'subscription:create' %}" hx-target="#form_subscription" hx-swap="innerHTML" class="custom-button new">Novo</button>
     </section>
 
-    <section class="tabela-container">
+    <section class="table-container">
         <table class="table">
             <caption>
             </caption>
 
             <colgroup>
                 <col style="width: 5%;">
-                <col style="width: 20%;">
-                <col style="width: 20%;">
+                <col style="width: 15%;">
                 <col style="width: 10%;">
                 <col style="width: 10%;">
                 <col style="width: 10%;">
                 <col style="width: 10%;">
-                <col style="width: 5%;">
+                <col style="width: 10%;">
+                <col style="width: 10%;">
+                <col style="width: 10%;">
             </colgroup>
 
             <thead>
@@ -86,31 +97,10 @@
                 </tr>
             </thead>
 
-            <tbody>
-                {% for subscription in subscriptions %}
-                    <tr>
-                        <td>{{ subscription.pk }}</td>
-                        <td>{{ subscription.description }}</td>
-                        <td>{{ subscription.supplier }}</td>
-                        <td>R$ {{ subscription.value|localize }}</td>
-                        <td>{{ subscription.renewal_day }}</td>
-                        <td>{{ subscription.category }}</td>
-                        <td>
-                            {{ subscription.get_payment_frequency_display }}
-                        </td>
-                        <td>
-                            {{ subscription.get_status_display }}
-                        </td>
-                        <td>
-                            <a href="{% url 'subscription:update' transaction.pk %}"><button type="button" class="custom-button outline success table-btn">Editar</button></a>
-                        </td>
-                    </tr>
-                {% empty %}
-                    <tr>
-                        <td colspan="8">Não há registros para serem exibidos</td>
-                    </tr>
-                {% endfor %}
+            <tbody id="subscription_table">
+                {% include 'subscription/partials/table.html' %}
             </tbody>
+
         </table>
 
         {% if is_paginated %}
@@ -128,4 +118,25 @@
         {% endif %}
     </section>
 </div>
+<script>
+    document.body.addEventListener('htmx:afterSwap', (e) => {
+        if (e.detail.target.id === "form_subscription") {
+            document.getElementById('dialog_form').showModal();
+        }
+    });
+
+    document.body.addEventListener('htmx:beforeSwap', (e) => {
+        // Se a resposta for vazia (após o delete ou save sucesso), fecha o modal
+        if (e.detail.target.id === "form_category" && !e.detail.xhr.response) {
+            document.getElementById('dialog_form').close();
+            document.getElementById('form_subscription').innerHTML = "";
+        }
+    });
+
+    document.body.addEventListener('closeModal', () => {
+        document.getElementById('dialog_form').close();
+        document.getElementById('form_subscription').innerHTML = "";
+
+    });
+</script>
 {% endblock %}
